# wise-doc-formatter

./: .env.example  .gitignore  README.md  custom_settings.json  main.py  pyproject.toml
.runtime/outputs/: smoke-formatted-20260317-152835.docx  smoke-punctuation-fixed-20260317-152835.docx
doc/: analyzer-skill.md  architecture.md  dependency-analysis.md  file-storage.md  formatter-boundary.md  openai-chat.md  progress-log.md  skill-migration-plan.md  tool-catalog.md
scripts/: __init__.py  formatter.py  punctuation.py
skills/: __init__.py  analyzer_engine.py  analyzer_routing.md  analyzer_routing.py  document_runtime.py  formatter_apply.md  formatter_apply.py  formatter_engine.py  punctuation_engine.py  punctuation_fix.md  punctuation_fix.py
src/doc_demo/: __init__.py  __main__.py
src/doc_demo/chat/: __init__.py  openai_chat.py
src/doc_demo/core/: __init__.py  state.py
src/doc_demo/graph/: workflow.py
src/doc_demo/skills/: __init__.py  builtin.py
src/doc_demo/tools/: __init__.py
src/doc_demo/ui/: __init__.py  gradio_app.py
src/doc_demo/utils/: paths.py
src/tools/: __init__.py  docx_formatter_pipeline.py
tests/docx_formatter_pipeline_test/: run.py
tests/tests_example/: example1-pipeline-output.docx  example1.docx  example2.docx  example3.docx  example4.docx  example5.docx
